--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.6"
 
 before_install:
-  - pip install -U --only-binary=numpy,scipy numpy scipy
+  - pip install -U --only-binary=numpy,scipy numpy scipy nose
 install:
   - python setup.py install
 script:
