--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  jobs:
+    pre_build:
+      - python -m pip install .
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
